--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -58,8 +58,8 @@ $success: #7952b3;
 @import "bootstrap/scss/transitions";
 @import "bootstrap/scss/dropdown";
 // @import "bootstrap/scss/button-group";
-// @import "bootstrap/scss/nav";
-// @import "bootstrap/scss/navbar"; // Requires nav
+@import "bootstrap/scss/nav";
+@import "bootstrap/scss/navbar"; // Requires nav
 // @import "bootstrap/scss/card";
 // @import "bootstrap/scss/breadcrumb";
 // @import "bootstrap/scss/accordion";
@@ -93,4 +93,11 @@ $success: #7952b3;
 
 body {
   padding: 1.5rem;
+   background: url('./../img/img-bg-2.jpg') top right no-repeat;
+   background-size: 100% 100% cover;
+   background-attachment: fixed;
+}
+
+.container, .container-md {
+  background-color: $body-bg;
 }
